--- a/chart.lib/chart.lib.csproj
+++ b/chart.lib/chart.lib.csproj
@@ -57,6 +57,7 @@
     <Compile Include="ChartRow.cs" />
     <Compile Include="DataModel.cs" />
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Side.cs" />
     <Compile Include="Stitch.cs" />
