Rethinking in progress

--- a/chart.lib/App.config
+++ b/chart.lib/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=chartdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=chartdb2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
