--- a/chart.mvc/Web.config
+++ b/chart.mvc/Web.config
@@ -90,7 +90,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=chartdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=chartdb2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.codedom>
     <compilers>
