--- a/chart.lib/chart.lib.csproj
+++ b/chart.lib/chart.lib.csproj
@@ -61,6 +61,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Side.cs" />
     <Compile Include="Stitch.cs" />
+    <Compile Include="StitchFactory.cs" />
+    <Compile Include="StitchType.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
